--- a/chat-sample/package.json
+++ b/chat-sample/package.json
@@ -1,65 +1,158 @@
 {
-	"name": "chat-sample",
-	"publisher": "vscode-samples",
-	"displayName": "Copilot Chat Sample",
-	"description": "Sample chat extension, a trusty cat tutor that will can teach you computer science topics.",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
-	},
-	"version": "0.1.0",
-	"engines": {
-		"vscode": "^1.90.0"
-	},
-	"categories": [
-		"AI",
-		"Chat"
-	],
-	"activationEvents": [],
-	"enabledApiProposals": [
-		"chatVariableResolver"
-	],
-	"contributes": {
-		"chatParticipants": [
-			{
-				"id": "chat-sample.cat",
-				"fullName": "Cat",
-				"name": "cat",
-				"description": "Meow! What can I teach you?",
-				"isSticky": true,
-				"commands": [
-					{
-						"name": "teach",
-						"description": "Pick at random a computer science concept then explain it in purfect way of a cat"
-					},
-					{
-						"name": "play",
-						"description": "Do whatever you want, you are a cat after all"
-					}
-				]
-			}
-		],
-		"commands": [
-			{
-				"command": "cat.namesInEditor",
-				"title": "Use Cat Names in Editor"
-			}
-		]
-	},
-	"main": "./out/extension.js",
-	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"lint": "eslint \"src/**/*.ts\"",
-		"watch": "tsc -watch -p ./"
-	},
-	"devDependencies": {
-		"@types/node": "^20.5.9",
-		"@vscode/prompt-tsx": "^0.2.3-alpha",
-		"@types/vscode": "1.90.0",
-		"@typescript-eslint/eslint-plugin": "^7.14.0",
-		"@typescript-eslint/parser": "^7.14.0",
-		"eslint": "^8.26.0",
-		"typescript": "^5.5.2"
-	}
+    "name": "chat-sample",
+    "publisher": "vscode-samples",
+    "displayName": "Copilot Chat Sample",
+    "description": "Sample chat extension, a trusty eclagent tutor that will can teach you computer science topics.",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Microsoft/vscode-extension-samples"
+    },
+    "version": "0.1.0",
+    "engines": {
+        "vscode": "^1.90.0"
+    },
+    "categories": [
+        "AI",
+        "Chat"
+    ],
+    "activationEvents": [],
+    "enabledApiProposals": [
+        "chatVariableResolver"
+    ],
+    "languages": [
+        {
+          "id": "ecl",
+          "extensions": [
+            "ecl",
+            "mod",
+            "ecllib"
+          ],
+          "aliases": [
+            "ECL",
+            "ecl"
+          ],
+          "configuration": "./ecl-tmLanguage/ecl.configuration.json"
+        }
+    ],
+    "contributes": {
+        "chatParticipants": [
+            {
+                "id": "chat-sample.eclagent",
+                "fullName": "eclagent",
+                "name": "eclagent",
+                "description": "What can I teach you?",
+                "isSticky": true,
+                "commands": [
+                    {
+                        "name": "summarize",
+                        "description": "Summarize the content of the file"
+                    },
+                    {
+                        "name": "comment",
+                        "description": "Comment the content of the file"
+                    },
+                    {
+                        "name": "revert",
+                        "description": "Revert the content of the file"
+                    },
+                    {
+                        "name": "teach",
+                        "description": "Pick at random a computer science concept then explain it in purfect way of a eclagent"
+                    }
+                ]
+            }
+        ],
+        "commands": [
+            {
+                "command": "eclagent.summarizeFileContent",
+                "title": "Summarize File Content"
+            },
+            {
+                "command": "eclagent.commentFileContent",
+                "title": "Normal Comment"
+            },
+            {
+                "command": "eclagent.commentDetailedFileContent",
+                "title": "Detailed Comment"
+            },
+            {
+                "command": "eclagent.commentTerseFileContent",
+                "title": "Terse Comment"
+            },
+            {
+                "command": "eclagent.redoPrompt",
+                "title": "Redo Last Prompt"
+            },
+            {
+                "command": "eclagent.revertFileContent",
+                "title": "Revert File Content"
+            }
+        ],
+        "menus": {
+            "editor/context": [
+              {
+                "when": "resourceLangId == ecl && resourceExtname == .ecl",
+                "command": "eclagent.summarizeFileContent",
+                "group": "aaa@1"
+              },
+              {
+                "when": "resourceLangId == ecl && resourceExtname == .ecl",
+                "submenu": "comments",
+                "group": "aaa@2"
+              },
+              {
+                "when": "resourceLangId == ecl && resourceExtname == .ecl",
+                "command": "eclagent.redoPrompt",
+                "group": "aaa@3"
+              },
+              {
+                "when": "resourceLangId == ecl && resourceExtname == .ecl",
+                "command": "eclagent.revertFileContent",
+                "group": "aaa@4"
+              }
+            ],
+            "view/item/context": [
+                { "submenu": "comments", "group": "navigation@1" }
+            ],
+            "comments": [
+                {
+                    "command": "eclagent.commentFileContent",
+                    "group": "navigation@1"
+                },
+                {
+                    "command": "eclagent.commentDetailedFileContent",
+                    "group": "navigation@2"
+                },
+                {
+                    "command": "eclagent.commentTerseFileContent",
+                    "group": "navigation@3"
+                }
+            ]
+        },
+        "submenus": [
+            {
+                "id": "comments",
+                "label": "Comment File Content",
+                "when": "resourceLangId == ecl && resourceExtname == .ecl",
+                "commands": [
+                    "eclagent.commentRedo","eclagent.commentDetailedFileContent"
+                ]
+            }
+        ]
+    },
+    "main": "./out/extension.js",
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./"
+    },
+    "devDependencies": {
+        "@types/node": "^20.5.9",
+        "@vscode/prompt-tsx": "^0.2.3-alpha",
+        "@types/vscode": "1.90.0",
+        "eslint": "^7.22.0",
+        "run-script-os": "^1.1.6",
+        "tslint": "^6.1.3",
+        "typescript": "^4.0.3"
+    }
 }
